fixed card gallery spacing and card display

--- a/src/components/builder/MagicCard.scss
+++ b/src/components/builder/MagicCard.scss
@@ -1,6 +1,7 @@
 .cardArt {
     cursor: pointer;
     width: 100%;
+    border-radius: 0.7rem; //Trim non-transparent cards
 }
 
 .cardArtEnlarged {
@@ -8,6 +9,7 @@
     -webkit-box-shadow: 0px 0px 40px 0px rgba(212,254,255,1);
     -moz-box-shadow: 0px 0px 40px 0px rgba(212,254,255,1);
     box-shadow: 0px 0px 40px 0px rgba(212,254,255,1);
+    border-radius: 0.9rem; //Trim non-transparent cards
 }
 
 .unclickable {
